# child-book-generator

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/preserve-child-voice/: SKILL.md
.claude/skills/select-cover-template/: SKILL.md
.claude/skills/select-page-layout/: SKILL.md
.github/workflows/: release.yml  sonar.yml
docs/: PLAN.md  README.md  p1-01-image-extraction.md  p1-02-book-json-synthesis.md  p1-03-interactive-gap-fill.md  p1-04-from-pdf-cli.md  p1-05-handwriting-ocr.md  p2-layout-improvements.md  printing.md
src/: agent.py  agent_tools.py  cli.py  colophon.py  config.py  draft.py  drawing_extraction.py  imposition.py  ingestion.py  memory.py  metadata_i18n.py  metadata_prompts.py  pages.py  prune.py  repl.py  schema.py  title_strip.py
src/providers/: image.py  llm.py  validator.py
tests/: test_agent.py  test_agent_greeting.py  test_agent_tools.py  test_builder.py  test_cli.py  test_cli_agent.py  test_colophon.py  test_draft.py  test_drawing_extraction.py  test_image_provider.py  test_imposition.py  test_ingestion.py  test_llm_providers.py  test_llm_translator_helpers.py  test_memory.py  test_metadata_i18n.py  test_metadata_prompts.py  test_pages.py  test_provider_selection.py  test_prune.py  test_repl.py  test_repl_chat.py  test_repl_drag_drop.py  test_repl_keyring.py  test_repl_load.py  test_repl_print.py  test_repl_render.py  test_repl_tools.py  test_schema.py  test_slash_menu.py  test_title_strip.py  test_validator.py  test_yavru_dinozor_e2e.py
